[package]
authors = ["Jordan Majd"]
edition = "2018"
readme = "README.md"
name = "keebchain"
version = "0.1.0"
resolver = "2"

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.2.0"
# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# I'm using waveshare RP2040 zero, similar enough to pro micro
#sparkfun-pro-micro-rp2040 = "0.1.0"

# If you're not going to use a Board Support Package you'll need these:
#rp2040-hal = { version="0.3.0", features=["rt"] }
#rp2040-boot2 = "0.2.0"

# my imports
panic-halt = "0.2.0"
smart-leds = "0.3.0"
nb = "1.0.0"
pio = "0.1.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "83fc175fd99f230e477f6fc4a0802e29fd8dcd6f" }
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
